# buildaquery

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
buildaquery/: __init__.py
buildaquery/abstract_syntax_tree/: README.md  models.py
buildaquery/compiler/: README.md  __init__.py  compiled_query.py  identifier_validation.py
buildaquery/compiler/clickhouse/: README.md  __init__.py  clickhouse_compiler.py
buildaquery/compiler/cockroachdb/: README.md  __init__.py  cockroachdb_compiler.py
buildaquery/compiler/duckdb/: README.md  __init__.py  duckdb_compiler.py
buildaquery/compiler/mariadb/: README.md  __init__.py  mariadb_compiler.py
buildaquery/compiler/mssql/: README.md  __init__.py  mssql_compiler.py
buildaquery/compiler/mysql/: README.md  __init__.py  mysql_compiler.py
buildaquery/compiler/oracle/: README.md  __init__.py  oracle_compiler.py
buildaquery/compiler/postgres/: README.md  postgres_compiler.py
buildaquery/compiler/sqlite/: README.md  __init__.py  sqlite_compiler.py
buildaquery/execution/: README.md  __init__.py  base.py  capabilities.py  clickhouse.py  cockroachdb.py  connection.py  duckdb.py  errors.py  mariadb.py  mssql.py  mysql.py  observability.py  oracle.py  postgres.py  retry.py  sqlite.py
buildaquery/migrations/: README.md  __init__.py  runner.py
buildaquery/seeding/: README.md  __init__.py  runner.py
buildaquery/tests/: test_ast.py  test_ast_postgres.py  test_batch_insert_compilers.py  test_compiler_clickhouse.py  test_compiler_cockroachdb.py  test_compiler_duckdb.py  test_compiler_identifier_security.py  test_compiler_mariadb.py  test_compiler_mssql.py  test_compiler_mysql.py  test_compiler_oracle.py  test_compiler_postgres.py  test_compiler_sqlite.py  test_ddl_oltp_compilers.py  test_execution.py  test_execution_capabilities.py  test_execution_clickhouse.py  test_execution_cockroachdb.py  test_execution_connection_management.py  test_execution_duckdb.py  test_execution_error_model.py  test_execution_mariadb.py  test_execution_mssql.py  test_execution_mysql.py  test_execution_named_params.py  test_execution_observability.py  test_execution_oracle.py  test_execution_postgres.py  test_execution_raw_sql_policy.py  test_execution_retry.py  test_execution_sqlite.py  test_migrations.py  test_public_api_exports.py  test_seeding.py  test_to_sql_debug_helpers.py  test_traversal_postgres.py  test_validation_models.py  test_validation_translators.py
buildaquery/traversal/: README.md  __init__.py  visitor_pattern.py
buildaquery/validation/: README.md  __init__.py  models.py  translators.py
docs/: docs.md
examples/: main.py  postgres_demo.py  sample_batch_write.py  sample_capabilities.py  sample_clickhouse.py  sample_cockroachdb.py  sample_connection_management.py  sample_ddl_constraints.py  sample_duckdb.py  sample_mariadb.py  sample_migrations.py  sample_mssql.py  sample_mysql.py  sample_named_params.py  sample_observability.py  sample_observability_integration.py  sample_oracle.py  sample_query.py  sample_returning.py  sample_row_shaping.py  sample_seeding.py  sample_sqlite.py  sample_starter_templates.py  sample_syntax_quickstart.py  sample_transactions.py  sample_upsert.py  sample_validation.py
scripts/: __init__.py  create_duckdb_dir.ps1  create_duckdb_dir.sh  create_sqlite_db.ps1  create_sqlite_db.sh
static/: requirements.txt
tests/: README.md  conftest.py  test_batch_write_integration.py  test_clickhouse_integration.py  test_cockroach_integration.py  test_compiler_postgres.py  test_connection_management_integration.py  test_ddl_constraints_integration.py  test_duckdb_integration.py  test_execution.py  test_execution_retry_integration.py  test_mariadb_integration.py  test_migrations_integration.py  test_mssql_integration.py  test_mysql_integration.py  test_named_params_integration.py  test_observability_integration.py  test_oltp_integration.py  test_oracle_integration.py  test_postgres_integration.py  test_raw_sql_policy_integration.py  test_returning_integration.py  test_row_shaping_integration.py  test_seeding_integration.py  test_sqlite_integration.py  test_to_sql_integration.py  test_transaction_integration.py  test_upsert_integration.py  test_validation_executor_boundary.py
