[tool.poetry]
name = "buildaquery"
version = "1.1.4"
description = "A Python SQL query builder with cross-dialect execution primitives and OLTP support."
authors = ["Anirudh Bhattacharya <anirudhbhattacharya1@gmail.com>"]
readme = "README.md"
packages = [{include = "buildaquery"}]
license = "MIT"
repository = "https://github.com/AnirudhB3000/buildaquery"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.12"
psycopg = { version = "3.3.3", optional = true }
mysql-connector-python = { version = "9.4.0", optional = true }
colorama = "0.4.6"
packaging = "26.0"
pluggy = "1.6.0"
Pygments = "2.19.2"
typing_extensions = "4.15.0"
tzdata = "2025.3"
python-dotenv = "^1.2.1"
oracledb = { version = "^3.4.2", optional = true }
pyodbc = { version = "^5.1.0", optional = true }
mariadb = { version = "^1.1.11", optional = true }
duckdb = { version = "^1.1.3", optional = true }
clickhouse-driver = { version = "^0.2.9", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-mock = "3.15.1"
iniconfig = "2.3.0"
twine = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "buildaquery/tests"]

[tool.poetry.scripts]
unit-tests = "scripts:run_unit_tests"
integration-tests = "scripts:run_integration_tests"
all-tests = "scripts:run_all_tests"
clean = "scripts:clean_project"
setup-tests = "scripts:setup_tests"
package-check = "scripts:run_package_checks"

[tool.poetry.urls]
"Homepage" = "https://github.com/AnirudhB3000/buildaquery"

[tool.poetry.extras]
postgres = ["psycopg"]
cockroach = ["psycopg"]
mysql = ["mysql-connector-python"]
mariadb = ["mariadb"]
oracle = ["oracledb"]
mssql = ["pyodbc"]
duckdb = ["duckdb"]
clickhouse = ["clickhouse-driver"]
all-databases = ["psycopg", "mysql-connector-python", "mariadb", "oracledb", "pyodbc", "duckdb", "clickhouse-driver"]
